--- a/Form2.resx
+++ b/Form2.resx
@@ -1920,4 +1920,7 @@
         SUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>48, 19</value>
+  </metadata>
 </root>
