--- a/Form1.resx
+++ b/Form1.resx
@@ -120,4 +120,81 @@
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAD6/v//9P3////+/v//////8fHx//T09P///////v7+////////////////////////////////////
+        /////////////////////////////////v////////79//368f/69OH//f7///v15f/6893/+/jv//Xn
+        v//26sT//Pjs/9/5///O9v7///////z9/v+ioqL/sLCx///////+/v7///////////////////7+////
+        ///89+j/368g//DamP/w2pn/368g//z25////////vz3//Pirv/v147/79qZ/+rIZP//+ur/47hD/9uk
+        EP/889T/+Oi5//jv1P/8+Oz/3fj+/7v2///x6ej/wsXF/8vJyP/Lysn/xsbG/+/v7////////v7+////
+        /////v3///////v14//dqhP/79aO/+/Wjv/dqhP/+/Ti///////w2pj/9OOz//79+v//////8fHv/8XH
+        zf/iy4n/6Mtz/8bHy//n6fD///////7+/v/1/P3/z/z//8/Lyv+PjIz/8PLy/+Hj4v+Ki4v/2NnZ////
+        ///9/f3//v7+//////////////////Phq//79eT/+/Xk//Phq//////////+//789f///////f7+////
+        ///c3Nv/i4uJ/97f4v/19vj/jo6R/8XEwv///////v7+/+X6//863f//kOr8///28/9B3f3/YOD6///1
+        8f+5t7f/qKmp//39/f///////v78///////58NX/05EA/+nJcf/pyXH/05EA//nw1f///////v77////
+        /v//////rKur/7W1tf/0+///4rpH/9ypEf/5+PL/ycrM/5+fnv/x8fH/6Pv+/1Pi//+Y4vL/7OLh/23j
+        /P905v3/tvj//7XGyf+7ubn/19jY//Dw8P///////v////7++//v2JL/+fDU//nw1f/v2JL//v77//7/
+        ////////8fHx/9nY1/+6u7z/xL+x//jjpv/nxFr/4btI/+Hg3v/Kysv/tbW1//X19f/+/f3//P///8bD
+        w/+Ki4v///Hu/7n3//8Azvr/tPf////w7f+Ii4v/xsfI///////8/f3//v7+////////////////////
+        ///+/v7//Pz8///////Ly8r/iYmG/+3y/v/45rL/zokA//bgpP/x9v//i4uK/8XFxf///////f39//v+
+        /v+E6///4O7x/9za2f+3t7f/usfJ/8X7//9w5f3/X+D6/+vk4//MyMf/rq+v//b29v///////v36///+
+        /f///v3//v36///////4+Pj/sbCw/8bHyv/k5+//4LhD/+W/Tf/86rT/xL+x/7S1tv/c3Nv/8vLy////
+        ///+/v7//////6Lu/v/6/////v38/6ipqf+6ubn///Tw/23i+v9I3fz/1////7/MzP+jo6P/4OHh//b1
+        9f///////v7+//7+/v//////9vb2/+Pi4v+kpKP/yMW6///2z//esCb/4LhD//D2//+6u73/rKyr//39
+        /f//////////////////////qO///+r7/v///f3//////9fY2P+Ii4z/6uHf/97///8F0Pr/iuz////7
+        9/+WmJj/tLW1///////9/f3//f39//////+4uLf/lpWU//n////u0YP/0I4A//7zzf/h5ez/iYiG/9jY
+        1////////f39//7+/v/////////////////E9f7/ufL+/////v//////7+/v/8fIyP/Kx8f/w83P/5vv
+        //+J6v7/eef9/8zT1P/QzMv/vL6+//Pz8//19fX/v7++/8vM0P/S0Mz/58Vf/+vLbv/v04H/yMS5/8bH
+        yv/MzMv/8fHx///////+/v7///////////////////////z///+f7v7/8f3////////9/v7//////62u
+        rv+ho6P///z3/4Lp/f8Z1Pv/3////9nZ1/+NkJD/4+Tk/+bm5f+Qj4z/1dbW///62v/UmQD/58Ri//r/
+        //+kpKP/r6+v///////9/f7//f3+///////9/f///v7///////////////////f+///6/v////////7+
+        /v/+/v7/+vr6/+Dh4f+WmJn/z9PS/+j///8t1/v/aeP7///69f+traz/q6ur//n////kwFb/158C///7
+        2//R0Mz/lZWT/+Pi4v/7+/z//f39//7+/v///////v7////////////////////////t/P//5/v/////
+        ///g+f//+f7//////v//////8/Pz/7a2t//Oy8v/3Nvb/3jl/P+C6f7/pvP//7fHzP/IwLP/8tqR/+rJ
+        af/kwFT/19fW/8vM0P+6urn/9PT0////////////7u78/+bl+v//////4N/5//f3/v///////////0/g
+        /v853P7/xfX+/wrU/v+Z7f7///////v+/v/9/f3//////7u8vP+Mj5D///fz/6Ty//8Azvf/wvr////o
+        uv/LiQD/8deQ//f8//+Qj43/vby8///////9/f3//f3+//////9SS+D/Liba/8fF9f8HANP/j4vr////
+        ////////q/D+/5vt/v/v/P//gOn+/9P3/////////f////7+/v//////9fX1/+Tl5f+srKz/ucTG/9P+
+        ///5/f7//v34///4vv/HxLT/qqqs/+fm5f/39/f///////7+/v/+/v///////62q8P+Vkez/8PD8/396
+        6P/Ozfb///////////+r8P7/nO3+/+/8//+A6P7/1Pf////////9/////v7+///////29vf/5eXl/66u
+        rv+7wLf/2OzH//r89//5+P7/xMX//7e3yf+urq3/4+Pk//X19f///////v7+//7+////////rarx/5WR
+        7P/w8Pz/f3ro/87N9v///////////0/g/v853P7/xfX+/wnU/v+Z7f7///////v+/v/9/f3//////76/
+        vv+MjYz///r//7Deq/8Vkgn/1PPG/8/H//8AAMr/nZnx////+P+NjY//u7u8///////9/f3//fz+////
+        //9RS+D/Liba/8bF9f8GANP/j4vr////////////7fz//+j7////////4Pn///n+//////7///////X0
+        9f+4uLj/zszO/9rZ2v+Bw3f/kMyI/7bgsf+7w7j/ubbF/6qn8/9/e+n/Z2Li/9nZ2//Q0cz/tbW3//Pz
+        8////////////+7u/P/m5fr//////+Df+v/39v3///////////////////////7//////////v7+//7+
+        /v/6+vr/4uPi/5aXlv/Lzsr/6fzm/0mqPP+Aw3b///7//66urv+srKz////5/3Nu5f8oIdf/3tz//8vL
+        0v+Wlpj/4ODh//r6+v/+/v7//v7+///////4+P7/9/f9//////////////////7////+//////////3+
+        ///+/v7//////7CwsP+goaD//////47Lhf8znyT/6Pvl/9nZ2v+LjYv/5eXk/+Tk5f+NjI//29vZ/+fm
+        //8TC9P/c27m/////P+ioqP/ra2u///////8/P7//////+zs/P+cme3/////////////////////////
+        ///+/v7///////Hx8f/Jysn/ysjK/8HHwP+g1Jn/mdCR/5DLiP/Kzsr/zszO/8DBwP/19fX/8/Pz/729
+        vv/Oz8v/z8/U/4N/6f+Hgur/jIjt/76+zP/MzMj/x8fI/+/v7////////////7Ox8v/IxvX/////////
+        /////////v7+//39/f//////2drZ/4iJh//m4ub/4fbe/yWYFf+c05X//////5aXlv+2trb///////39
+        /f/9/f3//////7S0tf+VlZj////7/5OP7v8AAND/1NL+/+np4f+IiIv/19fY//////////7/5eT6/6mm
+        8P///////////////////////v7+/6usq/+5uLn///f//3i+bv9ds1D/4/ng/8HHwP+goaD/4+Pi//f3
+        9////////v7+//7+/v//////9fX1/+Dg4f+ioqP/w8PM/+Df//9DPdz/W1bf////9P+7u7n/qKip////
+        /f/19f7/n5zu///////+/v7///////Ly8v/a29r/uLe4/7fAtv/H6cL/hMZ7/3i+b//n4+j/ysnL/7Gy
+        sf/39/f///////3+/f////////////3+/f//////9vb2/66ur//Kysj/7e7l/2pl4v9taOX/uLX5/7W0
+        xv+4uLf/3d3a/9nZ7f+Fgev///////39/f//////x8fH/4mKif/89P3/wOW7/xiSBv/B5rz//PP9/4iK
+        iP/IyMj///////39/f/+/v7///////////////////////7+/v/9/f3//////8bGx/+IiIv//v/w/7y5
+        +P8AAM3/r6z1////8f+Kiov/xcXD//7+///+/v3/9vb2/7S0s//Jycn/4uPi/3m/b/+Fxnv/xunB/7fA
+        tv+5uLn/2tra//Ly8v///////v7+///////q9ej/+fz4//n8+P/q9ej///////7+/v//////8PDw/9fX
+        2P+6urn/urnH/7+9+v9xbOb/W1bg/+np4v+YlOP/T0ji/+jn+//z8/P/oaKh/8jIyP/19/X/WrNO/3i/
+        bv//+P//t7e3/6urq//+/v7///////3+/f//////5fPj/zGfIf+b0ZT/m9GU/zCfIf/l8+P///////3+
+        /f///////f39/6ioqf+4uLf////1/2tl4v89Nt3/+fny/4yI5/82Ltz/5OP6//7+/v//////xsfG/46N
+        j//29Pb/4+Hk/4uKi//e3d////////7+/v/+/v7/5fPj///////3+/b/jsuF/87oy//P6cv/jsuF//b7
+        9v///////v/+//7+/v/9/f3//////9jY2f+Kiov/4+Li//T09f+Pj4z/ycnF/8nH+//29vz//v7+////
+        ///q6ev/ycjJ/5fNj/+jzp3/xcXF/9bl1P/2/PX/4PDe/67aqP/A4rv///////j8+P+a0JL/1uzS/9bs
+        0v+a0JL/+fz5///////+//7///////7+/v//////7+/v/8bGxv/Jycn/zMzL/8jIyv/x8en/t7X1/+Lh
+        +f/r9ur/zefJ/7rhtf/g897/Ua5D/2+9ZP/y+/H/lM+M/7fdsf+84Lf/4/Lh////////////5PPi/y6e
+        Hv+Z0JH/mdCS/y6eHv/k8uL///////3+/f/////////////////+/v7//////7CwsP+ioqL//Pz9////
+        ///KyPX/5OP6//n8+f/r9ur/7vft//7+/v/o9Ob/7ffs///////+//7//////////////////f79////
+        ////////3/Dd//X69P/1+vX/3/Dd//////////////////////////////////7+/v//////9PT0//Hx
+        8f/+/v/////+//T0/f/7+/7/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
